Version 2.0.0:
- Renamed from RawData to Binary (along with package and class names changes)
- Changed methods to throw unchecked BinaryException instead of checked IOException
- Added Hex and Base64 support


Version 1.1.0 (2015-10-01):
- Java 6 support
- Dropped methods that were using Java 7 Path class (use File or path String instead)
- OSGi bundle
- POM updates
- Documentation updates


Version 1.0.0 (2015-09-25) - Initial release